[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/resources/axe.png" type="Texture" id=1]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=2]
[ext_resource path="res://Prefabs/Scripts/Upgrade.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.768627, 0.768627, 0.768627, 0.0509804 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 4
border_color = Color( 1, 1, 1, 0.4 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.964706, 0.858824, 0.160784, 0.419608 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.964706, 0.858824, 0.160784, 0 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.11, 0.11, 0.11, 0.95 )
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 3

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 0.211765 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0, 0, 0.4 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.2 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.4 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0.05 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Upgrade Block" type="MarginContainer"]
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 38, 38 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 25, 25 )
texture = ExtResource( 1 )

[node name="unowned" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.643137 )
self_modulate = Color( 0.376471, 1, 0, 1 )
margin_left = 2.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 52.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="n" type="Node2D" parent="."]

[node name="alert" type="MarginContainer" parent="n"]
visible = false
margin_right = 10.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="n/alert"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="progress" type="MarginContainer" parent="n"]
visible = false
margin_left = 14.0
margin_top = 39.0
margin_right = 40.0
margin_bottom = 62.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="n/progress"]
margin_left = 5.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = 18.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="n/progress"]
margin_left = 5.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.800781, 0.800781, 0.800781, 1 )
text = "0/1"
align = 1
valign = 1

[node name="tags" type="HBoxContainer" parent="n"]
margin_right = 54.0
margin_bottom = 10.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inactive" type="MarginContainer" parent="n/tags"]
visible = false
margin_left = 22.0
margin_right = 32.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="n/tags/inactive"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="pending" type="MarginContainer" parent="n/tags"]
visible = false
margin_left = 22.0
margin_right = 32.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="n/tags/pending"]
self_modulate = Color( 1, 0.658824, 0, 1 )
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )

[node name="flash" type="Panel" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 8 )

[node name="flash2" type="Panel" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 8 )
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
